--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -5,12 +5,21 @@ body{
     margin-top: 0;
 }
 .outter-form-login {
+    color: white;
     padding: 15px;
-    background: #EEEEEE;
+    background: #606062;
     position: relative;
     border-radius: 5px;
-
 }
+
+.img-register {
+    color: white;
+    padding: 15px;
+    background: transparent;
+    position: relative;
+    border-radius: 5px;
+}
+
 .logo-login {
     position: absolute;
     border-radius: 50%;
@@ -33,8 +42,8 @@ h3.title-login {
     color: #ADADAD;
 }
 .btn-custom-green {
-    background: #f2c939;
-    color: #555;
+    background: #FFC300;
+    color: #606062;
     font-weight: bold;
 }
 
@@ -43,10 +52,10 @@ h3.title-login {
     font-size: 14px;
     font-weight: 400;
     line-height: 1;
-    color: #555;
+    color: white;
     text-align: center;
-    background-color: #f2c939;
-    border: 1px solid #f2c939;
+    background-color: #FFC300;
+    border: 1px solid #FFC300;
 }
 
 .inner-login .form-control {
@@ -80,15 +89,15 @@ img {
 #youridea{
   font-family: "Bradley Hand ITC";
   font-weight: bold;
-  color: #f2c939;
+  color: #FFC300;
 }
 
 #app {
-  color: #f2c939;
+  color: #FFC300;
 }
 
 #register{
-  color: #f2c939;
+  color: #FFC300;
 }
 
 .h1, .h2, .h3, h1, h2, h3 {
@@ -101,8 +110,8 @@ p{
 }
 
 .navbar-default {
-    background-color: rgb(242, 201, 57);
-    border-color: #f2c939;
+    background-color: rgb(255, 195, 0);
+    border-color: #FFC300;
 }
 
 #placeholder{
@@ -171,9 +180,9 @@ input[type="color"]:focus,
 }
 
 .btn-custom-yellow {
-    color: #555;
-    background-color: #f2c939;
-    border-color: #f2c939;
+    color: white;
+    background-color: #FFC300;
+    border-color: #FFC300;
 }
 
 .input-group-btn:first-child>.btn, .input-group-btn:first-child>.btn-group {
@@ -194,7 +203,7 @@ input[type="color"]:focus,
 
 nav {
     color: #fff;
-    background-color: #f2c939;
+    background-color: #FFC300;
     width: 100%;
     height: 56px;
     line-height: 56px;
@@ -612,4 +621,10 @@ a .navbar-brand{
 
 .navbar-default .navbar-brand{
     color: #FFFFFF;
+}
+
+.alert-warning {
+    color: #ffc300;
+    background-color: #606062;
+    border-color: #606062;
 }
