--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -1,13 +1,27 @@
 body{
     background-color: #e2e1dc;
 }
+
+@font-face {
+    font-family: "Century Gothic";
+    src: url(https://github.com/petrosalema/aloha-editor-barcamp-2013/blob/master/fonts/century-gothic-bold.ttf);
+}
+
 .form-login{
     margin-top: 0;
 }
-.outter-form-login {
+.outter-form-register {
     color: white;
     padding: 15px;
     background: #606062;
+    position: relative;
+    border-radius: 5px;
+}
+
+.outter-form-login{
+    background: #e2e1dc;
+    color: white;
+    padding: 15px;
     position: relative;
     border-radius: 5px;
 }
@@ -77,13 +91,8 @@ img {
   margin-right: auto;
 }
 
-@font-face {
-    font-family: "Century Gothic";
-    src: url(https://github.com/petrosalema/aloha-editor-barcamp-2013/blob/master/fonts/century-gothic-bold.ttf);
-}
-
 #throw {
-  font-family: "Century Gothic";
+  font-family: "Century Gothic,", sans-serif;
 }
 
 #youridea{
@@ -215,12 +224,15 @@ nav {
 
 .list-view-column, btn, submit {
     padding: 5px;
-    background: #f1f1f1;
+    background: #FFFFFF;
     position: relative;
     border-radius: 0px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5px;
+    padding-right: 10px;
+    border:1px;
+    border-bottom-color: sienna;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.12);
 }
 
@@ -240,6 +252,7 @@ h5{
 #img-payment{
     max-width: 100px;
     max-height: 80px;
+    padding-right: 10px;
 }
 
 #img-konveksi{
@@ -627,4 +640,14 @@ a .navbar-brand{
     color: #ffc300;
     background-color: #606062;
     border-color: #606062;
+}
+
+a:focus, a:hover {
+    color: #23527c;
+    text-decoration: none;
+}
+
+a {
+    color: #545454;
+    text-decoration: none;
 }
