--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -116,7 +116,7 @@ h3.title-login {
     border-radius: 5px;
 }
 
-img {
+#banner-konveksi {
   height: 180px;
   width: 180px;
   position: relative;
@@ -197,12 +197,6 @@ input[type="color"]:focus,
   outline: 0 none;
 }
 
-.navbar {
-    position: relative;
-    min-height: 50px;
-    margin-bottom: 20px;
-    border: 0px solid transparent;
-}
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   input[type="date"].form-control,
@@ -307,8 +301,18 @@ h5{
 }
 
 #img-konveksi{
-    max-width: 500px;
+    width: auto;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 300px;
+}
+
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 12px;
+    padding-left: 12px;
 }
 
 /*custom checkbox*/
@@ -771,4 +775,16 @@ a {
 #separator{
     margin-top:5px;
     margin-bottom:10px;
+}
+
+#img-custom-login {
+  height: 180px;
+  width: 180px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.konveksi-col{
+    padding-right: 16px;
 }
