--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -262,11 +262,28 @@ nav {
     color: #777;
 }
 
-.list-view-column, btn, submit {
+#navbar-wishlist{
     padding: 5px;
     background: #FFFFFF;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5px;
+    padding-right: 10px;
+    border: 1px solid #d5d5d5;
     border-radius: 0px;
+    border-left-color: #ffffff;
+    border-left-width: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075);
+    box-shadow: 0 1px 2px rgba(0,0,0,.075);
+}
+
+.list-view-column {
+    padding: 5px;
+    background: #FFFFFF;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5px;
@@ -280,6 +297,7 @@ nav {
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075);
     box-shadow: 0 1px 2px rgba(0,0,0,.075);
 }
+
 
 #img-no-bg{
     background-image: none;
@@ -787,4 +805,14 @@ a {
 
 .konveksi-col{
     padding-right: 16px;
+}
+
+#wishlist-delete{
+    background: #dadada;
+    border-radius: 50px;
+    padding: 6px;
+}
+
+#checkbox-wishlist{
+    padding-left: 25px;
 }
