--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -676,7 +676,9 @@ input[type="radio"] .styled:checked + label::after {
 .fb-profile img.fb-image-lg{
     z-index: 0;
     width: 100%;
+    height: 50%
     margin-bottom: 10px;
+
 }
 
 .fb-image-profile
@@ -686,20 +688,95 @@ input[type="radio"] .styled:checked + label::after {
     width: 20%;
 }
 
+@media (max-width: 1024px){
+    .fb-image-profile
+    {
+        margin: -86px 10px 0px 416px;
+        z-index: 9;
+        width: 15%; 
+    }
+}
+
 @media (max-width:768px)
 {
 
   .fb-profile-text>h1{
     font-weight: 700;
     font-size:16px;
+
   }
 
   .fb-image-profile
   {
-    margin: -45px 10px 0px 25px;
+    margin: -71px 12px 0px 316px;
     z-index: 9;
-    width: 20%; 
+    width: 15%; 
   }
+}
+
+@media (max-width: 720px){
+    .fb-image-profile
+      {
+        margin: -71px 12px 0px 304px;
+        z-index: 9;
+        width: 15%; 
+     }
+}
+
+@media (max-width: 640px){
+    .fb-image-profile
+      {
+        margin: -59px 12px 0px 269px;
+        z-index: 9;
+        width: 15%; 
+     }
+}
+
+@media (max-width: 577px){
+    .fb-image-profile
+      {
+        margin: -56px 12px 0px 246px;
+        z-index: 9;
+        width: 15%; 
+     }
+}
+
+@media (max-width: 480px){
+    .fb-image-profile
+      {
+        margin: -46px 12px 0px 201px;
+        z-index: 9;
+        width: 15%; 
+     }
+}
+
+@media(max-width: 400px){
+    
+    .fb-image-profile
+      {
+        margin: -42px 12px 0px 167px;
+        z-index: 9;
+        width: 15%; 
+     }
+}
+
+@media(max-width: 360px){
+    
+    .fb-image-profile
+      {
+        margin: -38px 12px 0px 149px;
+        z-index: 9;
+        width: 15%; 
+     }
+}
+@media(max-width: 320px){
+    
+    .fb-image-profile
+      {
+        margin: -37px 12px 0px 133px;
+        z-index: 9;
+        width: 15%; 
+     }
 }
 /*sampul foto*/
 
@@ -850,4 +927,110 @@ a {
   bottom: 0;
   margin: auto;
   text-align: center;
+}
+
+.table-custom{
+    background: #606062;
+    border: 1px solid #FFFFFF;
+    color: white;
+}
+
+.thumbnail-profile {
+  display: block;
+  padding: 2px;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 100px;
+  -webkit-transition: border .2s ease-in-out;
+       -o-transition: border .2s ease-in-out;
+          transition: border .2s ease-in-out;
+}
+
+/* USER PROFILE PAGE */
+ .card {
+    margin-top: 20px;
+    padding: 30px;
+    background-color: rgba(214, 224, 226, 0.2);
+    -webkit-border-top-left-radius:5px;
+    -moz-border-top-left-radius:5px;
+    border-top-left-radius:5px;
+    -webkit-border-top-right-radius:5px;
+    -moz-border-top-right-radius:5px;
+    border-top-right-radius:5px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.card.hovercard {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+    text-align: center;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 1);
+}
+.card.hovercard .card-background {
+    height: 130px;
+}
+.card-background img {
+    -webkit-filter: blur(25px);
+    -moz-filter: blur(25px);
+    -o-filter: blur(25px);
+    -ms-filter: blur(25px);
+    filter: blur(25px);
+    margin-left: -100px;
+    margin-top: -200px;
+    min-width: 130%;
+}
+.card.hovercard .useravatar {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .useravatar img {
+    width: 100px;
+    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
+}
+.card.hovercard .card-info {
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+    right: 0;
+}
+.card.hovercard .card-info .card-title {
+    padding:0 5px;
+    font-size: 20px;
+    line-height: 1;
+    color: #262626;
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.card.hovercard .card-info {
+    overflow: hidden;
+    font-size: 12px;
+    line-height: 20px;
+    color: #737373;
+    text-overflow: ellipsis;
+}
+.card.hovercard .bottom {
+    padding: 0 20px;
+    margin-bottom: 17px;
+}
+.btn-pref .btn {
+    -webkit-border-radius:0 !important;
+}
+
+.profile-view{
+    padding-left: 10px;
 }
