--- a/assets/style.css
+++ b/assets/style.css
@@ -1,79 +1,92 @@
-#imaginary_container{
+#imaginary_container {
     margin-top: 8px;
 }
-.stylish-input-group .input-group-addon{
+
+.stylish-input-group .input-group-addon {
     background: white !important;
 }
-.stylish-input-group .form-control{
-    border-right:0;
-    box-shadow:0 0 0;
-    border-color:#ccc;
-}
-.stylish-input-group button{
-    border:0;
-    background:transparent;
+
+.stylish-input-group .form-control {
+    border-right: 0;
+    box-shadow: 0 0 0;
+    border-color: #ccc;
 }
 
-#navbarform{
+.stylish-input-group button {
+    border: 0;
+    background: transparent;
+}
+
+#navbarform {
     padding: 0;
     border-bottom: 0;
     border-top: 0;
     padding-left: 0;
 }
-#inputnav{
+
+#inputnav {
     padding-right: 5px;
 }
-#navbartoggle{
+
+#navbartoggle {
     margin-left: 5px;
     border: 0;
 }
-#navbar{
+
+#navbar {
     border-radius: 0;
     margin-bottom: 0;
     background: #FFC300;
 }
-#navbarcollapse{
+
+#navbarcollapse {
     border-radius: 0;
     margin-bottom: 0;
     background: darkorange;
     height: 305px;
 }
 
-#brand{
+#brand {
     font-size: 15px;
     padding-left: 0;
     padding-right: 5px;
 }
-#produk{
+
+#produk {
     padding-left: 5px;
     padding-right: 5px;
 }
-#produkcaption{
+
+#produkcaption {
     font-size: 10px;
     margin: 0 0 0px;
 }
-#produkrating{
+
+#produkrating {
     font-size: 8px;
     margin: 0 0 0px;
 }
-#produkname{
+
+#produkname {
     margin-bottom: 0px;
 }
-#produkprice{
+
+#produkprice {
     margin-top: 5px;
 }
 
-.buttonmenu1{
+.buttonmenu1 {
     color: white;
-    background-color:dimgray;
+    background-color: dimgray;
     border: 0;
     margin-bottom: 5px;
     margin-right: 0px;
     width: 100%;
     border-radius: 50px 0 0 0;
-    box-shadow: 0 1px 2px rgba(0,0,0,.075);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .075);
 }
-.buttonmenu2{
+
+.buttonmenu2 {
     color: white;
     background-color: dimgray;
     border: 0;
@@ -82,7 +95,8 @@
     width: 100%;
     border-radius: 0 50px 0 0;
 }
-.seeall{
+
+.seeall {
     color: white;
     background-color: orange;
     border: 0;
@@ -90,16 +104,18 @@
     border-radius: 2px;
     float: right;
 }
-#brand{
+
+#brand {
     color: white;
 }
-#footimg{
+
+#footimg {
     margin-top: 7px;
 }
-#menu{
+
+#menu {
     margin-left: 6px;
 }
-
 
 body {
     padding-top: 50px;
@@ -110,14 +126,14 @@ pre {
     tab-size: 8;
 }
 
-
-#profilmenu{
+#profilmenu {
     text-align: center;
     padding-left: 10%;
     padding-top: 5%;
     padding-bottom: 3%;
 }
-#divider{
+
+#divider {
     background: #f1741e;
     margin-top: 2px;
     margin-bottom: 2px;
@@ -132,7 +148,8 @@ pre {
     padding: 20px;
     width: 200px;
     text-align: center;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
     transition-duration: 0.4s;
     text-decoration: none;
     overflow: hidden;
@@ -159,66 +176,74 @@ pre {
     transition: 0s
 }
 
-#fotoproduk{
+#fotoproduk {
     width: 200px;
     height: 250px;
 }
-#fotodetails{
+
+#fotodetails {
     margin: 10px;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-#batasatas{
+#batasatas {
     background-color: #606062;
     height: 30px;
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 20px 20px 5px 5px;
 }
-#batasbawah{
+
+#batasbawah {
     background-color: #606062;
     height: 30px;
     margin-top: 10px;
     border-radius: 5px 5px 20px 20px;
 }
-#carousel-left{
-    background-repeat: repeat-x;
-    background-image: none;
-}
-#carousel-right{
+
+#carousel-left {
     background-repeat: repeat-x;
     background-image: none;
 }
 
-#deskripsiproduk{
-    background-color: #606062;
-    padding:2%;
-    color: white;
-    border-radius: 5% 5% 5% 5%;
-    margin: 1%;
+#carousel-right {
+    background-repeat: repeat-x;
+    background-image: none;
 }
-#buttonproduk{
+
+#deskripsiproduk {
+    background-color: #606062;
+    padding: 5%;
+    color: white;
+    /*border-radius: 5% 5% 5% 5%;*/
+    margin: 0%;
+}
+
+#buttonproduk {
     width: 100%;
     background-color: #FFC300;
 }
-#pembatas{
+
+#pembatas {
     height: 2px;
     background-color: white;
 }
 
-#menusidebar{
+#menusidebar {
     color: white;
     height: 50px;
     font-size: 20px;
     text-align: center;
     text-decoration: none;
 }
-#fotosampul{
+
+#fotosampul {
     height: 200px;
     width: auto;
 }
-#keterangan{
+
+#keterangan {
     background-color: #606062;
     height: 100px;
 }
@@ -231,12 +256,13 @@ pre {
 
 #upload-photo-label {
     padding: 5px 30px;
-    font-family:arial;
+    font-family: arial;
     font-size: 13px;
     margin-top: 5%;
     background-color: #FFC300;
     border-radius: 5%;
 }
-#upload-photo-label:active{
-    background:yellow;
+
+#upload-photo-label:active {
+    background: yellow;
 }
